# ztac

./: Cargo.toml  README.md
ztac_circuit/: Cargo.toml
ztac_circuit/src/circuit/: mod.rs
ztac_circuit/src/test/: pedersen_test.rs
ztac_demo/: deploy.js  package-lock.json  package.json  test.js
ztac_jni/: Cargo.toml  README.md  build_all.sh
ztac_jni/javalib/: .gitignore  build.gradle  settings.gradle
ztac_jni/javalib/build2/reports/tests/test/: index.html
ztac_jni/javalib/build2/reports/tests/test/classes/: com.tacplatform.ztac.bls12.Groth16Test.html
ztac_jni/javalib/build2/test-results/test/: TEST-com.tacplatform.ztac.bls12.Groth16Test.xml
ztac_jni/javalib/src/main/java/com/tacplatform/ztac/bls12/: Groth16.java  JNILibrary.java
ztac_jni/javalib/src/main/java/com/tacplatform/ztac/bn256/: Groth16.java  JNILibrary.java
ztac_jni/javalib/src/test/java/com/tacplatform/ztac/bls12/: Groth16Test.java
ztac_jni/src/: lib.rs
ztac_jni/src/tests/: mod.rs
ztac_node/: README.md  package-lock.json  package.json
ztac_node/native/: Cargo.toml
ztac_node/native/src/: helpers.rs  lib.rs
ztac_node/test/: test_transfer.js  test_utxo_accumulator.js
ztac_primitives/: Cargo.toml
ztac_setup/: Cargo.toml
